Frontend/src/components/ImageSection.css
video {
  object-fit: cover;
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: -1;
}

.image-container {
  background: url("https://cdn1.i-scmp.com/sites/default/files/images/methode/2017/05/02/35cc35e2-2a41-11e7-acff-d77f13c4971d_image_hires_150136.JPG")
    center center/cover no-repeat;
  height: 70vh;
  width: 100%;
  text-align: left;
  display: flex;
  text-align: left;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
  object-fit: contain;
}
.image-inner-container {
  padding: 20px;
}

.image-header {
  width: 100%;
  text-align: left;
  font-size: 50px;
}

.image-description {
  font-size: 38px;
}

.image-container > h1 {
  color: #fff;
  font-size: 50px;
  margin-top: 50px;
}

.image-container > p {
  margin-top: 8px;
  color: #fff;
  font-size: 32px;
  /* font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif; */
}
.image-btn-container {
  align-items: flex-end;
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.trail-info-container {
  text-align: left;
}

.trail-info {
  font-size: 38px;
}

.image-btns {
  margin-top: 32px;
}

.image-btns .btn {
  margin: 6px;
}

.fa-play-circle {
  margin-left: 4px;
}

@media screen and (max-width: 960px) {
  .image-container > h1 {
    font-size: 70px;
    margin-top: -150px;
  }
}

@media screen and (max-width: 768px) {
  .image-container > h1 {
    font-size: 50px;
    margin-top: -100px;
  }

  .image-container > p {
    font-size: 30px;
  }

  .btn-mobile {
    display: block;
    text-decoration: none;
  }

  .btn {
    width: 100%;
  }
}

